<resources>
    <string name="netease_app_name">网易云音乐</string>
    <string name="netease_hint_phone_number">输入网易云登陆的手机号</string>
    <string name="netease_hint_password">密码</string>
    <string name="netease_action_login">点击登录</string>

    <string name="netease_error_login_failed_remote">登录失败:服务器</string>
    <string name="netease_error_empty_phone">手机号不能为空</string>
    <string name="netease_error_empty_password">密码不能为空</string>
    <string name="netease_hint_login_waitting">登陆中,请稍候</string>
    <string name="netease_tips_action_more">更多选项</string>

    <string name="netease_nav_title_local">本地音乐</string>
    <string name="netease_nav_title_download">下载管理</string>
    <string name="netease_nav_title_fm">私人FM</string>
    <string name="netease_nav_title_latest">最近播放</string>
    <string name="netease_nav_title_daily">每日推荐</string>
    <string name="netease_playlist_header_create">创建的歌单</string>
    <string name="netease_playlist_header_collect">收藏的歌单</string>
    <string name="netease_title_not_login">未登录(点击登录)</string>
    <string name="netease_menu_action_main_logout">退出登录</string>
    <string name="netease_menu_action_main_setting">设置</string>
    <string name="netease_playlist_subtitle_template">(共%d首)</string>
    <string name="netease_menu_fm_add_playlist">收藏到歌单</string>
    <string name="netease_menu_fm_download">下载</string>
    <string name="netease_menu_fm_share">分享</string>
    <string name="netease_menu_fm_quality">音质</string>
    <string name="netease_menu_fm_artist">歌手</string>
    <string name="netease_menu_fm_album">专辑</string>
    <string name="netease_menu_fm_timer">定时播放</string>
    <string name="netease_popup_add_to_next">下一首播放</string>
    <string name="netease_popup_comment">评论</string>
    <string name="netease_header_music_title_play_all">播放全部</string>
    <string name="netease_header_action_multi_select">多选</string>
    <string name="netease_tips_daily_recommend_description">根据你的音乐口味生成，每天 6:00 更新</string>
    <string name="netease_alert_need_login">使用此功能需要登陆,是否跳转到登陆界面</string>
    <string name="netease_action_give_up">算了</string>
    <string name="netease_title_daily_recommend">@string/netease_nav_title_daily</string>
    <string name="netease_action_search">搜索</string>

    <string name="netease_error_login_failed_template">登录出错:%s</string>
    <string name="netease_player_time_stamp_zero">00:00</string>
    <string name="netease_no_lyric">无歌词</string>
    <string name="netease_all">所有</string>
    <string name="netease_week">一周</string>
    <string name="netease_record">播放记录统计</string>
    <string name="netease_dislike_music">dislike</string>
    <string name="netease_like_music">like</string>
    <string name="netease_play_next">下一首</string>
    <string name="netease_play_pause">play/pause</string>
    <string name="netease_play_count">%d次</string>
    <string name="netease_sign_in">签到</string>
    <string name="netease_signed">已签到</string>
    <string name="netease_not_login">未登录</string>
    <string name="netease_to_login"><![CDATA[点击登录>]]></string>

</resources>
